fix(card-aircraft): fixed layer positioning (z-index) and added button color change on hover

--- a/src/scss/components/_card-aircraft.scss
+++ b/src/scss/components/_card-aircraft.scss
@@ -36,6 +36,11 @@
         transform: scale( 1.1 );
     }
 
+    &__meta {
+        position: relative;
+        z-index: 2;
+    }
+
     &__body {
         display: flex;
         flex-direction: column;
@@ -89,9 +94,6 @@
 
         border-bottom: 1px solid var(--border-light);
 
-        position: relative;
-        z-index: 2;
-
         font-size: var(--text-xs);
 
         margin-top: var(--space-6);
@@ -114,6 +116,13 @@
     &__btn-details {
         flex-grow: 1;
         cursor: pointer;
+
+        transition: background-color var(--duration-base) var(--ease-in-out);
+    }
+
+    &:hover &__btn-details {
+      background-color: var(--color-primary-900);
+      color: var(--color-neutral-000); 
     }
 
     &__btn-compare {
